[package]
name = "actix-minimum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
dotenv = "0.15.0"
sqlite = "0.30.1"
serde = "1"
serde_json = "1"
futures = "0.3.1"
openssl = { version = "0.10", features = ["vendored"]}
